--- a/src/main/resources/templates/bus/show.html
+++ b/src/main/resources/templates/bus/show.html
@@ -5,6 +5,7 @@
     <title>Buses</title>
 </head>
 <body>
+<header th:include="fragments/fragments :: header"></header>
 
 <a th:href="@{/buses/add}">Add</a>
 
@@ -29,5 +30,6 @@
     </tbody>
 </table>
 
+<footer th:include="fragments/fragments :: footer"></footer>
 </body>
 </html>
