--- a/src/main/resources/templates/bus/confirm.html
+++ b/src/main/resources/templates/bus/confirm.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Form</title>
+    <title th:text="#{bus.confirm.title}">title</title>
 </head>
 <body>
 <header th:include="fragments/fragments :: header"></header>
@@ -10,9 +10,10 @@
 <form th:action="@{/buses/delete}" method="post">
     <input type="hidden" th:name="id" th:value="${id}"/>
     <label>
-        <span th:text="#{confirm.text}">Are you sure?</span><br>
-        <button th:name="submit" th:value="delete" th:text="Delete">Delete</button>
-        <button th:name="submit" th:value="cancel" th:text="Cancel">Cancel</button>
+        <div th:text="#{bus.confirm.areYouSure}">areYouSure</div>
+        <br>
+        <button th:name="submit" th:value="delete" th:text="#{bus.confirm.delete}">delete</button>
+        <button th:name="submit" th:value="cancel" th:text="#{bus.confirm.cancel}">cancel</button>
     </label>
 
 </form>
