--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -10,6 +10,7 @@
     <a th:href="@{/}" th:text="#{fragments.header.home}">home</a>
     <a th:href="@{/buses/}" th:text="#{fragments.header.buses}">buses</a>
     <a th:href="@{/busstops/}" th:text="#{fragments.header.busstops}">busstops</a>
+    <a th:href="@{/tracks/}" th:text="#{fragments.header.tracks}">tracks</a>
     <hr>
 </div>
 
